# Obscura-Complete

./: .gitignore  API_Docs.md  Implementation_Report.md  Readme.md  Technical_Docs.md  Testing_Guide.md
backend/: .env.example  check-routes.js  package-lock.json  package.json  test  test-all-features.js  test-encryption.js  test-escrow-system.js  test-ipfs.js  test-offers-clean.js  test-verification-clean.js  test-verification-system.js
backend/src/: server.js  test-complete-flow.js
backend/src/config/: mongodb.js
backend/src/controllers/: assetController.js  escrowController.js  healthController.js  noteController.js  offerController.js  proofController.js  propertyController.js  settlementController.js  verificationController.js  walletController.js
backend/src/middleware/: errorHandler.js
backend/src/models/: AccessRequest.js  Offer.js  Proof.js  ProofEvent.js  Property.js  VerificationHistory.js  index.js
backend/src/routes/: assetRoutes.js  escrow.js  escrowRoutes.js  healthRoutes.js  noteRoutes.js  offerRoutes.js  proofRoutes.js  propertyRoutes.js  settlementRoutes.js  verificationRoutes.js  walletRoutes.js
backend/src/services/: accountManager.js  backgroundConsumeService.js  encryptionService.js  ipfsService.js  midenClient.js  midenClient.js.backup  noteManager.js  proofService.js
backend/src/utils/: constants.js  encryption.js  logger.js
docs/: MIDEN_INTEGRATION.md  REAL_MIDEN_IMPLEMENTATION.md
frontend/: .eslintrc.json  DEMO_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Header.jsx  TransactionLog.jsx
frontend/src/context/: AppContext.jsx
frontend/src/pages/: Alice.jsx  Bob.jsx  Home.jsx  Platform.jsx  ProofDashboard.jsx
frontend/src/services/: api.js
miden-rust-service/: Cargo.toml  store.sqlite3  test_rpc.rs
miden-rust-service/keystore/: 1355820403471565814  1557858934792342354  2203660076289980457  2258707512254433292  2281125421456527778  2681209581837360050  3085387369295641218  3193295104920272829  3202328196481692294  3341886631746994665  3569817782920234176  3840622979434040048  3850688401569504495  3897193002560446948  3934686890016368895  4104123949508053037  4133888670177061192  4407947082089738625  4755711802341116810  4825270039280442842  4889682082731878268  4915621246758786162  5473895561301881101  5487752266208533569  5633549440129378657  5791560190340952095  5925203731893700336  6070653294777075912  639200390887440374  6436349259690214030  6458104705617827549  712560454058388732  7871755764864826989  7881255229524619315  8236935152416709718  8619811403998215223  8877407567106773874  9023335538276086634  915943588679213119  9342371191535579067  (+3 more)
miden-rust-service/src/: client.rs  escrow.rs  lib.rs  main.rs
scripts/: deploy.sh
