[package]
name = "miden-rust-service"
version = "0.1.0"
edition = "2021"
authors = ["FrameX Corporation <sidhanth@framex.io>"]
description = "Obscura × Miden: Privacy-preserving real estate tokenization service"

[dependencies]
# Miden Core Dependencies (v0.12)
miden-client = { version = "0.12", features = ["testing", "tonic"] }
miden-client-sqlite-store = { version = "0.12" }
miden-lib = { version = "0.12", default-features = false }
miden-objects = { version = "0.12", default-features = false, features = ["testing"] }
miden-crypto = { version = "0.17.1", features = ["executable"] }
miden-assembly = "0.18.3"

# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async Runtime
tokio = { version = "1.46", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "sync",
    "time",
    "fs",
    "io-util",
    "signal"
] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Cryptography & Random
rand = "0.9"
rand_chacha = "0.9.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
hex = "0.4"

# HTTP Client (for backend integration)
reqwest = { version = "0.12", features = ["json"] }

# Time & Date
chrono = { version = "0.4", features = ["serde"] }

# Environment Variables
dotenvy = "0.15"

[lib]
name = "miden_rust_service"
path = "src/lib.rs"

[[bin]]
name = "miden-rust-service"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "fat"          # Full Link Time Optimization
codegen-units = 1    # Maximum optimization
strip = true         # Strip symbols for smaller binary
panic = "abort"      # Smaller binary size

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Production optimized builds
[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true